--- a/qt_project/finance/finance.ui
+++ b/qt_project/finance/finance.ui
@@ -6,36 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>569</width>
-    <height>205</height>
+    <width>580</width>
+    <height>200</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>金融理财</string>
   </property>
-  <widget class="QLabel" name="labelIncome">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>81</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>收益率计算</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="labelIncomeSrc">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>40</y>
+     <x>20</x>
+     <y>30</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -52,8 +34,8 @@
   <widget class="QLabel" name="labelIncomeTime">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>70</y>
+     <x>20</x>
+     <y>60</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -70,8 +52,8 @@
   <widget class="QLabel" name="labelIncomeDest">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>100</y>
+     <x>20</x>
+     <y>90</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -88,8 +70,8 @@
   <widget class="QLabel" name="labelIncomeDest_2">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>130</y>
+     <x>20</x>
+     <y>120</y>
      <width>81</width>
      <height>21</height>
     </rect>
@@ -106,8 +88,8 @@
   <widget class="QLineEdit" name="inputSrc">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>40</y>
+     <x>100</x>
+     <y>30</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -130,8 +112,8 @@
   <widget class="QLineEdit" name="inputTime">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>70</y>
+     <x>100</x>
+     <y>60</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -151,8 +133,8 @@
   <widget class="QLineEdit" name="inputDest">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>100</y>
+     <x>100</x>
+     <y>90</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -172,8 +154,8 @@
   <widget class="QLineEdit" name="inputRate">
    <property name="geometry">
     <rect>
-     <x>90</x>
-     <y>130</y>
+     <x>100</x>
+     <y>120</y>
      <width>151</width>
      <height>21</height>
     </rect>
@@ -190,29 +172,11 @@
     <string>0.00</string>
    </property>
   </widget>
-  <widget class="QLabel" name="labelFuli">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>10</y>
-     <width>71</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>复利计算</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="labelFuliSrc">
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>40</y>
+     <y>30</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -230,7 +194,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>70</y>
+     <y>60</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -248,7 +212,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>100</y>
+     <y>90</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -266,7 +230,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>130</y>
+     <y>120</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -284,7 +248,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>40</y>
+     <y>30</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -305,7 +269,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>70</y>
+     <y>60</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -326,7 +290,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>100</y>
+     <y>90</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -347,7 +311,7 @@
    <property name="geometry">
     <rect>
      <x>410</x>
-     <y>130</y>
+     <y>120</y>
      <width>151</width>
      <height>20</height>
     </rect>
@@ -367,8 +331,8 @@
   <widget class="QPushButton" name="btnCalcRate">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>160</y>
+     <x>20</x>
+     <y>150</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -386,7 +350,7 @@
    <property name="geometry">
     <rect>
      <x>330</x>
-     <y>160</y>
+     <y>150</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -400,6 +364,80 @@
     <string>计算</string>
    </property>
   </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>251</width>
+     <height>181</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="title">
+    <string>收益率计算</string>
+   </property>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>251</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="title">
+     <string>收益率计算</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="groupBox_3">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>10</y>
+     <width>251</width>
+     <height>181</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="title">
+    <string>复利计算</string>
+   </property>
+  </widget>
+  <zorder>groupBox_3</zorder>
+  <zorder>groupBox</zorder>
+  <zorder>labelIncomeSrc</zorder>
+  <zorder>labelIncomeTime</zorder>
+  <zorder>labelIncomeDest</zorder>
+  <zorder>labelIncomeDest_2</zorder>
+  <zorder>inputSrc</zorder>
+  <zorder>inputTime</zorder>
+  <zorder>inputDest</zorder>
+  <zorder>inputRate</zorder>
+  <zorder>labelFuliSrc</zorder>
+  <zorder>labelFuliTime</zorder>
+  <zorder>labelFuliRate</zorder>
+  <zorder>labelFuliDest</zorder>
+  <zorder>inputFuliSrc</zorder>
+  <zorder>inputFuliTime</zorder>
+  <zorder>inputFuliRate</zorder>
+  <zorder>inputFuliDest</zorder>
+  <zorder>btnCalcRate</zorder>
+  <zorder>btnCalcFuli</zorder>
  </widget>
  <resources/>
  <connections/>
