--- a/qt_project/nl_del/nl_del.ui
+++ b/qt_project/nl_del/nl_del.ui
@@ -6,12 +6,17 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>592</width>
-    <height>126</height>
+    <width>590</width>
+    <height>129</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>12</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
-   <string>删除换行符</string>
+   <string>段落间隔转换器</string>
   </property>
   <widget class="QPushButton" name="btnNlDelOpen">
    <property name="geometry">
@@ -53,7 +58,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>60</y>
+     <y>90</y>
      <width>571</width>
      <height>31</height>
     </rect>
@@ -67,13 +72,16 @@
     <string>开始</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QPushButton" name="btnNlDelOpen_2">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>100</y>
-     <width>241</width>
-     <height>16</height>
+     <y>50</y>
+     <width>75</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="font">
@@ -82,7 +90,37 @@
     </font>
    </property>
    <property name="text">
-    <string>文本处理，保证段落之间间隔一行</string>
+    <string>行距</string>
+   </property>
+  </widget>
+  <widget class="QSpinBox" name="spinBoxLineNum">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>50</y>
+     <width>491</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="minimumSize">
+    <size>
+     <width>491</width>
+     <height>31</height>
+    </size>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="minimum">
+    <number>0</number>
+   </property>
+   <property name="maximum">
+    <number>3</number>
+   </property>
+   <property name="value">
+    <number>0</number>
    </property>
   </widget>
  </widget>
