--- a/qt_project/edit/text2htmldlg.ui
+++ b/qt_project/edit/text2htmldlg.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>487</width>
+    <width>489</width>
     <height>652</height>
    </rect>
   </property>
@@ -14,7 +14,7 @@
    <string>Text转Html</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0" colspan="3">
     <widget class="QPlainTextEdit" name="textHtmlEdit">
      <property name="minimumSize">
       <size>
@@ -50,7 +50,7 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="1" column="1" colspan="2">
     <widget class="QSpinBox" name="spinBoxNlineNum">
      <property name="minimumSize">
       <size>
@@ -93,6 +93,24 @@
     </widget>
    </item>
    <item row="2" column="1">
+    <widget class="QPushButton" name="btnClear">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>清空</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
     <widget class="QPushButton" name="btnCopy">
      <property name="minimumSize">
       <size>
