--- a/qt_project/resources.qrc
+++ b/qt_project/resources.qrc
@@ -1,5 +1,9 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file>res/images/file_new.png</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>res/images/file_new.png</file>
+        <file>res/images/icon_open-file.png</file>
+        <file>res/images/icon_add-row.png</file>
+        <file>res/images/icon_save.png</file>
+        <file>res/images/icon_del-row.png</file>
+    </qresource>
 </RCC>
