--- a/qt_project/finance/finance.ui
+++ b/qt_project/finance/finance.ui
@@ -10,6 +10,18 @@
     <height>200</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>580</width>
+    <height>200</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>580</width>
+    <height>200</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>金融理财</string>
   </property>
@@ -418,6 +430,17 @@
     <string>复利计算</string>
    </property>
   </widget>
+  <widget class="QWidget" name="">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>2</width>
+     <height>2</height>
+    </rect>
+   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout"/>
+  </widget>
   <zorder>groupBox_3</zorder>
   <zorder>groupBox</zorder>
   <zorder>labelIncomeSrc</zorder>
@@ -438,6 +461,7 @@
   <zorder>inputFuliDest</zorder>
   <zorder>btnCalcRate</zorder>
   <zorder>btnCalcFuli</zorder>
+  <zorder>horizontalSpacer</zorder>
  </widget>
  <resources/>
  <connections/>
