--- a/qt_project/picmerge/picmergeview.ui
+++ b/qt_project/picmerge/picmergeview.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>图片合并</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/res/images/icon_play.png</normaloff>:/res/images/icon_play.png</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QLabel" name="guideText">
