--- a/qt_project/resources.qrc
+++ b/qt_project/resources.qrc
@@ -5,5 +5,6 @@
         <file>res/images/icon_add-row.png</file>
         <file>res/images/icon_save.png</file>
         <file>res/images/icon_del-row.png</file>
+        <file>res/images/icon_play.png</file>
     </qresource>
 </RCC>
