--- a/qt_project/picmerge/picmergeview.ui
+++ b/qt_project/picmerge/picmergeview.ui
@@ -26,21 +26,39 @@
       </font>
      </property>
      <property name="text">
-      <string/>
+      <string>Lable</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QTextBrowser" name="textBrowser">
-     <property name="documentTitle">
-      <string>图片合并</string>
+    <widget class="QPlainTextEdit" name="infoText">
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+      </font>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QProgressBar" name="mergeProgress">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>10</height>
+      </size>
+     </property>
+     <property name="value">
+      <number>0</number>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPushButton" name="btnAccountOpen">
+      <widget class="QPushButton" name="btnPicMerge">
        <property name="font">
         <font>
          <pointsize>12</pointsize>
@@ -51,7 +69,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources.qrc">
-         <normaloff>:/res/images/icon_open-file.png</normaloff>:/res/images/icon_open-file.png</iconset>
+         <normaloff>:/res/images/icon_merg.png</normaloff>:/res/images/icon_merg.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -62,7 +80,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnAccountSave">
+      <widget class="QPushButton" name="btnPicSplit">
        <property name="font">
         <font>
          <pointsize>12</pointsize>
@@ -73,7 +91,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources.qrc">
-         <normaloff>:/res/images/icon_save.png</normaloff>:/res/images/icon_save.png</iconset>
+         <normaloff>:/res/images/icon_divide.png</normaloff>:/res/images/icon_divide.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -84,29 +102,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnPoGAdd">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="../resources.qrc">
-         <normaloff>:/res/images/icon_add-row.png</normaloff>:/res/images/icon_add-row.png</iconset>
-       </property>
-       <property name="iconSize">
-        <size>
-         <width>48</width>
-         <height>48</height>
-        </size>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btnPogDel">
+      <widget class="QPushButton" name="btnInfoClear">
        <property name="font">
         <font>
          <pointsize>12</pointsize>
