--- a/qt_project/resources.qrc
+++ b/qt_project/resources.qrc
@@ -1,6 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>res/images/file_new.png</file>
         <file>res/images/icon_open-file.png</file>
         <file>res/images/icon_add-row.png</file>
         <file>res/images/icon_save.png</file>
@@ -9,5 +8,6 @@
         <file>res/images/icon_divide.png</file>
         <file>res/images/icon_merg.png</file>
         <file>res/images/icon_clear.png</file>
+        <file>res/images/icon_file_new.png</file>
     </qresource>
 </RCC>
