--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>396</width>
-    <height>201</height>
+    <height>231</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -135,7 +135,7 @@
      <x>0</x>
      <y>0</y>
      <width>396</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -243,18 +243,18 @@
   </action>
   <action name="actionAboutThis">
    <property name="text">
-    <string>关于本软件(&amp;T)</string>
+    <string>关于软件(&amp;A)</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+Shift+T</string>
+    <string>Ctrl+A</string>
    </property>
   </action>
   <action name="actionAboutQt">
    <property name="text">
-    <string>关于Qt(&amp;A)</string>
+    <string>关于Qt(&amp;Q)</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+A</string>
+    <string>Ctrl+Q</string>
    </property>
   </action>
  </widget>
