Dev V1.5.1 Show pictures in QListWidget
Signed-off-by: RockyChing <zdh1021680772@163.com>

--- a/qt_project/picmerge/picmergeview.ui
+++ b/qt_project/picmerge/picmergeview.ui
@@ -43,6 +43,9 @@
     </widget>
    </item>
    <item>
+    <widget class="QListWidget" name="picListWidget"/>
+   </item>
+   <item>
     <widget class="QProgressBar" name="mergeProgress">
      <property name="maximumSize">
       <size>
