--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -168,20 +168,28 @@
    </widget>
    <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>编辑(&amp;E)</string>
+     <string>编辑</string>
     </property>
     <addaction name="actionNewLine"/>
     <addaction name="actionText2Html"/>
+    <addaction name="separator"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
-     <string>帮助(&amp;H)</string>
+     <string>帮助</string>
     </property>
     <addaction name="actionAboutThis"/>
     <addaction name="actionAboutQt"/>
    </widget>
+   <widget class="QMenu" name="menuTool">
+    <property name="title">
+     <string>工具</string>
+    </property>
+    <addaction name="actionLog"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuTool"/>
    <addaction name="menuAbout"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
@@ -273,6 +281,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Q</string>
+   </property>
+  </action>
+  <action name="actionLog">
+   <property name="text">
+    <string>Log窗口(&amp;L)</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+L</string>
    </property>
   </action>
  </widget>
