Dev V1.6.4 Delete null row of QTableView
Signed-off-by: zhengdianhao <zhengdianhao@hjimi.com>

--- a/qt_project/resources.qrc
+++ b/qt_project/resources.qrc
@@ -13,5 +13,6 @@
         <file>res/images/icon_forward.png</file>
         <file>res/images/icon_refresh.png</file>
         <file>res/images/icon_search.png</file>
+        <file>res/images/icon_filter.png</file>
     </qresource>
 </RCC>
