--- a/qt_project/pog/pogtableview.ui
+++ b/qt_project/pog/pogtableview.ui
@@ -53,7 +53,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="btnPoGSave">
+      <widget class="QPushButton" name="btnPoGFilter">
        <property name="font">
         <font>
          <pointsize>12</pointsize>
@@ -64,7 +64,7 @@
        </property>
        <property name="icon">
         <iconset resource="../resources.qrc">
-         <normaloff>:/res/images/icon_save.png</normaloff>:/res/images/icon_save.png</iconset>
+         <normaloff>:/res/images/icon_filter.png</normaloff>:/res/images/icon_filter.png</iconset>
        </property>
        <property name="iconSize">
         <size>
