--- a/qt_project/edit/filerenamedlg.ui
+++ b/qt_project/edit/filerenamedlg.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>HtmlFileRenameDlg</class>
- <widget class="QDialog" name="HtmlFileRenameDlg">
+ <class>FileRenameDlg</class>
+ <widget class="QDialog" name="FileRenameDlg">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Html文件重命名</string>
+   <string>文件重命名</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
