--- a/qt_project/epub/htmlidgendlg.ui
+++ b/qt_project/epub/htmlidgendlg.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RandomSerialsDlg</class>
- <widget class="QDialog" name="RandomSerialsDlg">
+ <class>HtmlIdGenDlg</class>
+ <widget class="QDialog" name="HtmlIdGenDlg">
   <property name="geometry">
    <rect>
     <x>0</x>
