Dev V1.15.0 Add html img-tag images rename
Signed-off-by: RockyChing <zdh1021680772@163.com>

--- a/qt_project/qtmainwindow.ui
+++ b/qt_project/qtmainwindow.ui
@@ -214,7 +214,9 @@
     <addaction name="actionText2Html"/>
     <addaction name="actionIDGen"/>
     <addaction name="actionRefGen"/>
+    <addaction name="separator"/>
     <addaction name="actionPdfNewlineRmver"/>
+    <addaction name="actionHtmlImgRename"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -358,6 +360,11 @@
   <action name="actionRefGen">
    <property name="text">
     <string>ref生成</string>
+   </property>
+  </action>
+  <action name="actionHtmlImgRename">
+   <property name="text">
+    <string>html中图片重命名</string>
    </property>
   </action>
  </widget>
