Dev V1.15.3 Add note translate item
Signed-off-by: RockyChing <zdh1021680772@163.com>

--- a/qt_project/epub/text2htmldlg.ui
+++ b/qt_project/epub/text2htmldlg.ui
@@ -62,6 +62,18 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QCheckBox" name="cBoxNote">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>注释转换</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item row="2" column="0">
